[gd_scene load_steps=8 format=2]

[ext_resource path="res://data/menu/settingsMenu/optionsPopUp.png" type="Texture" id=1]
[ext_resource path="res://data/scenes/NewButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/scripts/settingsMenu.gd" type="Script" id=3]
[ext_resource path="res://data/menu/settingsMenu/display.png" type="Texture" id=4]
[ext_resource path="res://data/menu/settingsMenu/controls.png" type="Texture" id=5]
[ext_resource path="res://data/audio/Menu Select.wav" type="AudioStream" id=6]
[ext_resource path="res://data/pauseMenu/resume.png" type="Texture" id=7]

[node name="settingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_top = 146.033
margin_right = 370.0
margin_bottom = 166.033
rect_min_size = Vector2( 10, 10 )

[node name="TextureRect" parent="controls" index="0"]
margin_right = 95.0
texture = ExtResource( 5 )

[node name="display" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 275.0
margin_top = 204.344
margin_right = 360.0
margin_bottom = 224.344
rect_min_size = Vector2( 10, 17 )

[node name="TextureRect" parent="display" index="0"]
texture = ExtResource( 4 )

[node name="ButtonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="Back" parent="." instance=ExtResource( 2 )]
margin_left = 133.567
margin_top = 36.1198
margin_right = 193.567
margin_bottom = 96.1198
rect_scale = Vector2( 0.5, 0.5 )

[node name="TextureRect" parent="Back" index="0"]
texture = ExtResource( 7 )
flip_h = true

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
[connection signal="button_down" from="controls" to="." method="_on_controls_button_down"]
[connection signal="mouse_entered" from="controls" to="." method="_on_controls_mouse_entered"]
[connection signal="mouse_exited" from="controls" to="." method="_on_controls_mouse_exited"]
[connection signal="pressed" from="controls" to="." method="_on_controls_pressed"]
[connection signal="button_down" from="display" to="." method="_on_display_button_down"]
[connection signal="mouse_entered" from="display" to="." method="_on_display_mouse_entered"]
[connection signal="mouse_exited" from="display" to="." method="_on_display_mouse_exited"]
[connection signal="pressed" from="display" to="." method="_on_display_pressed"]
[connection signal="button_down" from="Back" to="." method="_on_Back_button_down"]
[connection signal="mouse_entered" from="Back" to="." method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="Back" to="." method="_on_Back_mouse_exited"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]

[editable path="controls"]

[editable path="display"]

[editable path="Back"]
